// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Break Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
  >
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <img
        alt="DSC07717"
        class="css-gm6a6z-ImageWrapper-BreakBlock e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 css-1raxwre-MuiTypography-root"
        role="heading"
      >
        Break block test
      </div>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render ImageRight 1`] = `
<DocumentFragment>
  <div
    class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
  >
    <div
      class="css-17wr6dm-BreakBlockSegment e11xbw3q0"
    >
      <img
        alt="DSC07717"
        class="css-gm6a6z-ImageWrapper-BreakBlock e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 css-1raxwre-MuiTypography-root"
        role="heading"
      >
        Break block test
      </div>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithButton 1`] = `
<DocumentFragment>
  <div
    class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
  >
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <img
        alt="DSC07717"
        class="css-gm6a6z-ImageWrapper-BreakBlock e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 css-1raxwre-MuiTypography-root"
        role="heading"
      >
        Break block test
      </div>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1qbnun0-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
        href="Link URL"
        tabindex="0"
      >
        Link Text
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-1k98guj-BreakBlockWrapper e11xbw3q1"
  >
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <img
        alt="DSC07717"
        class="css-gm6a6z-ImageWrapper-BreakBlock e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 css-1raxwre-MuiTypography-root"
        role="heading"
      >
        Break block test
      </div>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
  >
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <img
        alt="DSC07717"
        class="css-gm6a6z-ImageWrapper-BreakBlock e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 css-1raxwre-MuiTypography-root"
        role="heading"
      >
        Break block test
      </div>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithoutImage 1`] = `
<DocumentFragment>
  <div
    class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
  >
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 css-1raxwre-MuiTypography-root"
        role="heading"
      >
        Break block test
      </div>
    </div>
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithoutImageRight 1`] = `
<DocumentFragment>
  <div
    class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
  >
    <div
      class="css-17wr6dm-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 css-1raxwre-MuiTypography-root"
        role="heading"
      >
        Break block test
      </div>
    </div>
    <div
      class="css-ywr472-BreakBlockSegment e11xbw3q0"
    >
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
